@@ -6,7 +6,7 @@
 
     django-treebeard benchmark models
 
-    :copyright: 2008-2009 by Gustavo Picon
+    :copyright: 2008-2010 by Gustavo Picon
     :license: Apache License 2.0
 
 """
